Bug 92794 - Addressbook Integration: Unevaluated variable '$filename$' displayed in error dialog
Summary: Addressbook Integration: Unevaluated variable '$filename$' displayed in error...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.0.1.1 rc
Hardware: Other All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:5.1.0 target:5.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-16 21:32 UTC by Robinson Tryon (qubit)
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Msg with french version of LibO 4.4.3.2 (8.88 KB, image/png)
2015-08-25 17:07 UTC, royerjy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robinson Tryon (qubit) 2015-07-16 21:32:26 UTC
TESTING on OS X 10.9.5 with
Version: 5.0.1.0.0+
Build ID: 27c281770925786732acf4931ca13f7962dc2d32
TinderBox: MacOSX-x86_64@49-TDF, Branch:libreoffice-5-0, Time: 2015-07-10_03:17:26
Locale: en-US (en.UTF-8)

Testing out bug 92792 I got the same error message as described in bug 90446 comment 1:
"The file $filename$ could not be loaded".

Thunderbird is *not* installed on this machine, but the error message does need cleanup.
Comment 1 Robinson Tryon (qubit) 2015-07-16 21:34:58 UTC
Julien: Same issue/related to bug 90446? And do you expect this to be fixed on the 5.0 branch?
Comment 2 Julien Nabet 2015-07-18 09:09:53 UTC
Perhaps related but I don't think it's the same.

I suppose the message comes from here:
http://opengrok.libreoffice.org/xref/core/connectivity/source/drivers/mork/MConnection.cxx#146

An example to follow could be this:
http://opengrok.libreoffice.org/xref/core/connectivity/source/drivers/dbase/DIndexes.cxx#48

I'm away from my laptop for 2 weeks so I won't be able to give it a try for the moment.
Comment 3 royerjy 2015-08-25 17:07:59 UTC
Created attachment 118174 [details]
Msg with french version of LibO 4.4.3.2
Comment 4 royerjy 2015-08-25 17:11:31 UTC
The problem is the same with LibO 4.4.3.2 and 5.0.1 Rc1 on Linux Mint 17 on 64 bits machine. No change with a new profile. No change if Thunderbird is running or not.
Comment 5 royerjy 2015-08-27 12:21:51 UTC
I made some tests with very few addresses in address books in Thunderbird. It is almost OK when Thunderbird address books have only some addresses, less than 100 addresses. However it is difficult to understand how works the transfer between LiBo and TB. Addresses deleted in TB always appears in LiBo. Difficult to explain how to reproduce. It seems than adresses.odb shows often 43 addresses. My address book has more than 1300 addresses...

Other experiences ?
Comment 6 Julien Nabet 2015-09-03 19:12:17 UTC
(In reply to Robinson Tryon (qubit) from comment #1)
> Julien: Same issue/related to bug 90446? And do you expect this to be fixed
> on the 5.0 branch?

Even if yours has the same symptom "The file $filename$ could not be loaded", the problem here is different.
In first one, TB was installed but not found because of a patch I pushed and which caused a regression.

In yours, there's no TB installed and $filename$ (which is a kind of variable) isn't dealt at all.

So in brief, I don't expect this to be fixed on 5.0 branch for the moment.
Comment 7 Julien Nabet 2015-09-03 20:49:30 UTC
I submitted a patch to gerrit review here:
https://gerrit.libreoffice.org/#/c/18324/

Royerjy: comment5 is not related with this bugtracker. Please submit a new bugtracker if you have a buggy behaviour which hasn't been described yet.
Comment 8 Commit Notification 2015-09-12 19:52:52 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01547985ceee8c199dc189071845ef5fcda11782

tdf#92794: '$' should be replaced in error dialog of addressbook

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2015-09-12 22:07:15 UTC
Gerrit review for 5.0:: https://gerrit.libreoffice.org/#/c/18520/
Comment 10 Commit Notification 2015-09-14 10:26:06 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=868ddebc1ad874ca17e0b7bee873dfeb5f6521ea&h=libreoffice-5-0

tdf#92794: '$' should be replaced in error dialog of addressbook

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 royerjy 2015-09-15 07:45:13 UTC
(In reply to Julien Nabet from comment #7)
> I submitted a patch to gerrit review here:
> https://gerrit.libreoffice.org/#/c/18324/
> 
> Royerjy: comment5 is not related with this bugtracker. Please submit a new
> bugtracker if you have a buggy behaviour which hasn't been described yet.

I will wait to test with this feature corrected to be able to explain the problem than I have with more information than the message "The file $filename$ could not be loaded".
Comment 12 Julien Nabet 2015-09-15 08:00:22 UTC
(In reply to royerjy from comment #11)
> (In reply to Julien Nabet from comment #7)
> > I submitted a patch to gerrit review here:
> > https://gerrit.libreoffice.org/#/c/18324/
> > 
> > Royerjy: comment5 is not related with this bugtracker. Please submit a new
> > bugtracker if you have a buggy behaviour which hasn't been described yet.
> 
> I will wait to test with this feature corrected to be able to explain the
> problem than I have with more information than the message "The file
> $filename$ could not be loaded".

Either LO doesn't find the file "abook.mab" or "history.mab".