tdf#92794: '$' should be replaced in error dialog of addressbook

Change-Id: Ic57611be96f160037fbff2e9452f9206083c80e4
Reviewed-on: https://gerrit.libreoffice.org/18324
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 01547985ceee8c199dc189071845ef5fcda11782)